Arreglado el envio de mensajes. Agregado imagen si una persona no esta agregada para avisar. Agregado ventana de editar y visualizar contacto