@@ -8,14 +8,14 @@ public abstract class FactoriaDAO {
 	public static FactoriaDAO getUnicaInstancia(String tipo) throws DAOException {
 		if (unicaInstancia == null) {
 			try {
-				unicaInstancia = (FactoriaDAO) Class.forName(tipo).newInstance();
+				unicaInstancia = (FactoriaDAO) Class.forName(tipo).getDeclaredConstructor().newInstance(); //método actualizado
 			} catch (Exception e) {
 				throw new DAOException("FactoriaDAO.getUnicaInstancia: " + e.getMessage());
 			}
 		}
 		return unicaInstancia;
 	}
-	
+
 	public static FactoriaDAO getUnicaInstancia() throws DAOException {
 		return (unicaInstancia == null) ? getUnicaInstancia(DAO_TDS) : unicaInstancia;
 	}
